Bring QS up to speed Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Ic2553c3d16e92072d7efe6f297746e6834772da2

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5195,6 +5195,7 @@
     <string name="title_tile_user">User switcher</string>
     <string name="title_tile_networkmode">Network mode</string>
     <string name="title_tile_nfc">NFC</string>
+    <string name="title_tile_expanded_desktop">Expanded desktop</string> 
     <string name="title_tile_screen_timeout">Screen timeout</string>
     <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
     <string name="title_tile_favcontact">Favorite Contact</string>
