--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5194,6 +5194,7 @@
     <string name="title_tile_wimax">WiMAX</string>
     <string name="title_tile_user">User switcher</string>
     <string name="title_tile_networkmode">Network mode</string>
+    <string name="title_tile_mobilenetwork">Mobile network</string>
     <string name="title_tile_nfc">NFC</string>
     <string name="title_tile_expanded_desktop">Expanded desktop</string> 
     <string name="title_tile_screen_timeout">Screen timeout</string>
