Squashed commit of the following for QS overhaul:
commit 17947c79c023ecdb466b292c44d5032ba3dc5c72
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 19:04:40 2013 -0400

    Revert "Settings: Status: Add day(s) to uptime"

    This reverts commit c6391fabefad2d0802bf3376ec541f2da6b2a6a1.

commit 9858224e6a805ef2534420e0dc56beb0ed23000d
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 06:20:54 2013 -0400

    Finally complete QS overhaul .. That was fun.  2/2
    Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

    Change-Id: I4d229d0bde0117864b9e6d15f2b57e380d64060b

commit c3ecc4e88a39c995774bf23a6638c080ec115d5e
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 04:50:21 2013 -0400

    Add back mobile network tile
    Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

    Change-Id: Id5ae87b52d1b1aaa93eea5b65aa40ec9d75ee4a6

commit 9a1917ab68c091e838ba7db276bde8bcc44049f2
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 04:48:01 2013 -0400

    Add back daydream tile
    Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

    Change-Id: I9510046d7091b29e7754915f7ae5414aa409a9a5

commit fa87256e3d6a87c0b8fe31590d12ad02e3e9914a
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 03:24:37 2013 -0400

    QS tile crap
    Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

    Change-Id: Ie54a3f1a42a330d4895468c71b1121e9a35f7355

commit a3fbf14bd034cbb7fd74d8d72ae7f7fc3b5c5e82
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 00:48:12 2013 -0400

    Remove fast charge crap
    Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

    Change-Id: Ic5ec22a56b1faa5564c2b0f5f4611d67ec379922

commit bfbec2eaff4e17678b07c915c9d9c843adf4a22b
Author: scotthartbti <scott.hart.bti@gmail.com>
Date:   Fri Apr 5 00:43:45 2013 -0400

    Bring QS up to speed
    Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

    Change-Id: Ic2553c3d16e92072d7efe6f297746e6834

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4983,6 +4983,7 @@
     <string name="title_toggle_brightness">Toggle Brightness</string>
     <string name="title_toggle_sync">Toggle Sync</string>
     <string name="title_toggle_reboot">Toggle Reboot (LongPress to Recovery)</string>
+    <string name="title_toggle_fcharge">Toggle Fast Charge</string> 
     <string name="title_toggle_wifiap">Toggle Wi-Fi AP</string>
     <string name="title_toggle_screentimeout">Toggle Screen timeout</string>
     <string name="title_toggle_mobiledata">Toggle Mobile data</string>
@@ -5189,10 +5190,13 @@
     <string name="title_tile_wimax">WiMAX</string>
     <string name="title_tile_user">User switcher</string>
     <string name="title_tile_networkmode">Network mode</string>
+    <string name="title_tile_mobilenetwork">Mobile network</string>
     <string name="title_tile_nfc">NFC</string>
+    <string name="title_tile_expanded_desktop">Expanded desktop</string> 
     <string name="title_tile_screen_timeout">Screen timeout</string>
     <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
     <string name="title_tile_favcontact">Favorite Contact</string>
+    <string name="title_tile_fcharge">Fast charge</string> 
     <string name="title_tile_usb_tether">USB Tether</string>
     <string name="title_tile_volume">Volume</string>
     <string name="title_tile_quiet_hours">Quiet hours</string>
@@ -5920,5 +5924,8 @@ rience. Better keep it disabled on lower end devices.</string>
     <!-- Lock volume keys -->
     <string name="sound_lock_volume_keys_title">Lock volume keys</string>
     <string name="sound_lock_volume_keys_summary">Prevents accidental unset of silent mode by pressing volume keys</string>
+
+    <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
+    <string name="title_tile_favcontact">Favorite Contact</string>
 
 </resources>
