Status bar hide 2/2 (Thanks slim) Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I27d2583a91351e8220e4f2c7adcbd5d09f8ccca5

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5963,4 +5963,8 @@ rience. Better keep it disabled on lower end devices.</string>
     <!-- stylus gestures support -->
     <string name="stylus_app_not_installed">%s is not installed</string>
 
+    <!-- Auto-Hide Status Bar -->
+    <string name="auto_hide_statusbar">Auto Hide statusbar</string>
+    <string name="auto_hide_statusbar_summary">Statusbar hides itself when there are no notifications</string> 
+
 </resources>
