--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5565,6 +5565,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="hex">Hex:</string>
     <string name="hex_hint">#ff000000</string>
     <string name="set">Set</string>
+    <string name="color_default">Default</string>
 
     <!-- Status bar background style -->
     <string name="status_bar_transparency_title">Status bar transparency</string>
@@ -5958,7 +5959,6 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="pie_style">Style and dimension</string>
     <string name="pie_style_title">Style</string>
     <string name="pie_dimens_title">Dimension</string>
-    <string name="pie_default">Default</string>
     <string name="pie_additional_options">Additional options</string>
     <string name="pie_show_snap_title">Show snap points</string>
     <string name="pie_show_snap_summary">Shows snap points to change the trigger edge dynamically</string>
