--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5198,6 +5198,7 @@
     <string name="title_tile_nfc">NFC</string>
     <string name="title_tile_expanded_desktop">Expanded desktop</string> 
     <string name="title_tile_screen_timeout">Screen timeout</string>
+    <string name="title_tile_customshortcut">Custom Shortcut</string> 
     <string name="title_toggle_favcontact">Toggle Favorite Contact</string>
     <string name="title_tile_fcharge">Fast charge</string> 
     <string name="title_tile_usb_tether">USB Tether</string>
