Classic Recents 2/2 Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I1c8a13380fd80ead50dfe3135b04966320bda767

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5967,4 +5967,8 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="auto_hide_statusbar">Auto Hide statusbar</string>
     <string name="auto_hide_statusbar_summary">Statusbar hides itself when there are no notifications</string> 
 
+    <!-- Classic Recent Menu -->
+    <string name="show_classic_recents">Classic Recents</string>
+    <string name="show_classic_recents_summary">Show Gingerbread styled recents menu</string> 
+
 </resources>
