--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6037,4 +6037,10 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- Permissions Management -->
     <string name="permissions_settings_title">Permissions</string>
+
+    <!-- Hidden Statusbar Pulldown -->
+     <string name="hidden_statusbar_pulldown_title">Hidden Statusbar Pulldown</string>
+    <string name="hidden_statusbar_pulldown_summary">Allows Statusbar to be pulled down when hidden in fullscreen apps</string>
+    <string name="hidden_statusbar_pulldown_timeout_title">Hidden Statusbar Pulldown Timeout</string>
+    <string name="hidden_statusbar_pulldown_timeout_summary">Timeout for hidden Statusbar window</string>
 </resources>
