--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5359,6 +5359,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="size_44_dp">44 dp</string>
     <string name="size_40_dp">40 dp</string>
     <string name="size_42_dp">42 dp</string>
+    <string name="size_0_dp">0 dp (off)</string>
     <string name="statusbar">Statusbar</string>
     <string name="top_of_navbar">Top of navbar</string>
     <string name="bottom_of_navbar">Bottom of navbar</string>
