--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4974,6 +4974,7 @@
     <string name="hardware_keys_action_last_app">Switch to last app</string>
     <string name="hardware_keys_action_custom_app">Custom app</string>
     <string name="hardware_keys_action_widgets">Widgets viewpager</string> 
+    <string name="hardware_keys_action_quicksettings">Quicksettings panel</string>
     <string name="key_menu_enabled">Menu Key Enabled</string>
     <string name="key_back_enabled">Back Key Enabled</string>
     <string name="key_home_enabled">Home Key Enabled</string>
@@ -5331,6 +5332,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="menu">Menu</string>
     <string name="open_ime_switcher">Open IME Switcher</string>
     <string name="kill_app">Kill app</string>
+    <string name="quicksettings">Quicksettings panel</string>
     <string name="widgets">Widgets viewpager</string> 
     <string name="lastapp">Last app</string>
     <string name="power">Power</string>
@@ -5399,6 +5401,7 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="navbar_action_widgets">Widgets viewpager</string> 
     <string name="navbar_action_power">Power</string>
     <string name="navbar_action_notifications">Notifications</string>
+    <string name="navbar_action_quicksettings">Quicksettings panel</string>
     <string name="navbar_action_none">None</string>
     <string name="navbar_enable_bar">Enable bar</string>
     <string name="navigation_bar_height_title">Navigation bar height</string>
@@ -6042,6 +6045,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="pie_action_widgets">Widgets viewpager</string>
     <string name="pie_action_power">Screen Off</string>
     <string name="pie_action_notifications">Notifications</string>
+    <string name="pie_action_quicksettings">Quicksettings panel</string>
     <string name="pie_action_none">None</string>
 
     <!-- Permissions Management -->
