Multiple commits for app sidebar support from ChameleonOS Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Ib0645179962c405a73e9137ffae103cb9838e3fc

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6070,4 +6070,15 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="power_notifications_ringtone_title">Notification sound</string>
     <!-- Sound settings, power notifications label for ringtone == none -->
     <string name="power_notifications_ringtone_silent">Silent</string>
+
+    <!-- App sidebar -->
+    <string name="app_sidebar_title">App sidebar</string>
+    <string name="app_sidebar_enable_title">Enable sidebar</string>
+    <string name="app_sidebar_sort_type_title">Sidebar sort order</string>
+    <string name="app_sidebar_transparency_title">Sidebar transparency</string>
+    <string name="app_sidebar_size_title">Sidebar size</string>
+    <string name="app_sidebar_exclude_list_title">Excluded apps</string>
+    <string name="app_sidebar_exclude_list_summary">Select applications to exclude from the sidebar</string>
+    <string name="excluded_apps_title">Excluded apps</string>
+    <string name="menu_excluded_apps_delete">Reset</string>
 </resources>
