Add donate preference in device settings Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I65948c6c60b011133e68f4e29f4eebf3a0c38319

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6071,6 +6071,11 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <!-- Sound settings, power notifications label for ringtone == none -->
     <string name="power_notifications_ringtone_silent">Silent</string>
 
+    <!-- Donate to ChameleonOS -->
+    <string name="donate_beanstalk_title">Support BeanStalk Builds</string>
+    <string name="donate_beanstalk_summary">Donate to BeanStalk Builds.</string>
+    <string name="donate_link" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HUUHRXDXNMZPU</string>
+
     <!-- App sidebar -->
     <string name="app_sidebar_title">App sidebar</string>
     <string name="app_sidebar_enable_title">Enable sidebar</string>
