Settings: Option to force keyboard to show enter key (2/2)
Original SlimRoms feature!  Not everyone likes emoticons :-(

Change-Id: I7dc8fd83ecf236ad5279b50ef916d08034c47882
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/strings.xml
	res/xml/keyboard_input_settings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6112,4 +6112,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- Section title for list of downloaded apps [CHAR LIMIT=30] -->
     <string name="user_market_apps_heading">Installed apps</string>
+
+    <string name="show_enter_key_title">Show enter key</string>
+    <string name="show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
 </resources>
