Add quick switch to gestures navigation and remove recents Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I99e1f5fef6f1408001f4ebb12b3ea148a471c50c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6099,6 +6099,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="edge_swipe_hide">Toggle status bar</string>
     <string name="edge_swipe_expand_qs">Expand quick settings</string>
     <string name="edge_swipe_back">Back</string>
+    <string name="edge_swipe_app_switch">Quick app switch</string>
     <string name="edge_swipe_home">Home</string>
     <string name="edge_swipe_menu">Menu</string>
     <string name="edge_swipe_app">Launch application ...</string>
