--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6147,4 +6147,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="halo_pause_title">Pause active app</string>
     <string name="halo_pause_summary">When opening an app with HALO the underlying app will get paused</string>    
 
+    <!-- Delete apn confirmation dialog message -->
+    <string name="confirm_delete_apn">The APN will be deleted.</string>
+
 </resources>
