--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4839,7 +4839,7 @@
     <string name="icon_picker_gallery">Gallery</string>
     <string name="icon_picker_google_small">Google (small)</string>
     <string name="icon_picker_googleplus">Google Plus</string>
-    <string name="icon_picker_googletalk">Google Talk</string>
+    <string name="icon_picker_googletalk">Hangouts</string>
     <string name="icon_picker_maps">Maps</string>
     <string name="icon_picker_movie">Movie</string>
     <string name="icon_picker_music">Music</string>
@@ -5847,7 +5847,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="notification_shortcuts_icon_picker_gears">Gears</string>
     <string name="notification_shortcuts_icon_picker_google_small">Google</string>
     <string name="notification_shortcuts_icon_picker_gplus">Google Plus</string>
-    <string name="notification_shortcuts_icon_picker_gtalk">GTalk</string>
+    <string name="notification_shortcuts_icon_picker_gtalk">Hangouts</string>
     <string name="notification_shortcuts_icon_picker_help">Help</string>
     <string name="notification_shortcuts_icon_picker_joystick">Joystick</string>
     <string name="notification_shortcuts_icon_picker_key">Keys/Accounts</string>
