--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6135,7 +6135,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="app_halo_label_white">Whitelist from HALO</string>
  
     <!-- HALO -->
-    <string name="halo_options_title">HALO</string>
+    <string name="halo_options_title">BeanStalk HALO</string>
     <string name="halo_hide_title">Hide HALO after activity</string>
     <string name="halo_hide_summary">HALO will appear for incoming tasks and scroll out of sight after a while</string>
     <string name="halo_reversed_title">Reverse HALO</string>
