--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5044,6 +5044,9 @@
     <string name="power_menu_expanded_desktop">Expanded desktop</string>
 
     <string name="power_menu_profiles_title">Profile switcher</string>
+    <string name="power_menu_profiles_disabled">Disabled</string>
+    <string name="power_menu_profiles_lock">Disabled on lockscreen</string>
+    <string name="power_menu_profiles_all">Always show</string>
     <string name="power_menu_airplane_title">Airplane mode</string>
     <string name="power_menu_user_title">User switcher</string>
     <string name="power_menu_sound_title">Sound panel</string>
