--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5088,6 +5088,8 @@
     <string name="display_category_wakeup_options_title">Wakeup options</string>
     <string name="pref_volume_wake_title">Volume rocker wake</string>
     <string name="pref_volume_wake_summary">Pressing the volume rocker up/down will wake the device</string>
+    <string name="pref_home_wake_title">Home button</string>
+    <string name="pref_home_wake_summary">Pressing the home button will wake your device</string>
 
     <!-- Power Widget toggle color -->
     <string name="toggle_color_title">Toggles color and bar</string>
