Revert "Multiple commits for app sidebar support from ChameleonOS"
This reverts commit 650f6bbe0a85d36b1092289c28674984b01da573.

Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/attrs.xml
	res/values/strings.xml

Change-Id: I1ddbaabc7ee202fed4d8d18691644d9c0e85942a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6081,17 +6081,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="donate_beanstalk_summary">Donate to BeanStalk Builds</string>
     <string name="donate_link" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HUUHRXDXNMZPU</string>
 
-    <!-- App sidebar -->
-    <string name="app_sidebar_title">App sidebar</string>
-    <string name="app_sidebar_enable_title">Enable sidebar</string>
-    <string name="app_sidebar_sort_type_title">Sidebar sort order</string>
-    <string name="app_sidebar_transparency_title">Sidebar transparency</string>
-    <string name="app_sidebar_size_title">Sidebar size</string>
-    <string name="app_sidebar_exclude_list_title">Excluded apps</string>
-    <string name="app_sidebar_exclude_list_summary">Select applications to exclude from the sidebar</string>
-    <string name="excluded_apps_title">Excluded apps</string>
-    <string name="menu_excluded_apps_delete">Reset</string>
-
+    <!--Gesture support-->
     <string name="edge_swipe_title">Gesture navigation</string>
     <string name="edge_swipe_right_title">Zone 3 Action</string>
     <string name="edge_swipe_left_title">Zone 1 Action</string>
