Appbar: Add a title summary > no more visual pain Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Ia1fa7ae44dc3745acd464fe810af985b6f8d4970

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6159,6 +6159,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- App sidebar -->
     <string name="app_sidebar_title">Appbar</string>
+    <string name="app_sidebar_title_summary">Adjust Appbar settings</string>
     <string name="app_sidebar_enable_title">Enable Appbar</string>
     <string name="app_sidebar_enable_summaryOn">Appbar is enabled</string>
     <string name="app_sidebar_enable_summaryOff">Appbar is disabled</string>
