--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6081,7 +6081,17 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="donate_beanstalk_summary">Donate to BeanStalk Builds</string>
     <string name="donate_link" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HUUHRXDXNMZPU</string>
 
-    <!--Gesture support-->
+    <!-- App sidebar -->
+    <string name="app_sidebar_title">App sidebar</string>
+    <string name="app_sidebar_enable_title">Enable sidebar</string>
+    <string name="app_sidebar_sort_type_title">Sidebar sort order</string>
+    <string name="app_sidebar_transparency_title">Sidebar transparency</string>
+    <string name="app_sidebar_size_title">Sidebar size</string>
+    <string name="app_sidebar_exclude_list_title">Excluded apps</string>
+    <string name="app_sidebar_exclude_list_summary">Select applications to exclude from the sidebar</string>
+    <string name="excluded_apps_title">Excluded apps</string>
+    <string name="menu_excluded_apps_delete">Reset</string>
+
     <string name="edge_swipe_title">Gesture navigation</string>
     <string name="edge_swipe_right_title">Zone 3 Action</string>
     <string name="edge_swipe_left_title">Zone 1 Action</string>
@@ -6156,39 +6166,5 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="clear_recents_position_title">Clear recents position</string>
     <string name="clear_recents_position_left">Left</string>
     <string name="clear_recents_position_right">Right</string>
-
-    <!-- App sidebar -->
-    <string name="app_sidebar_title">Appbar</string>
-    <string name="app_sidebar_title_summary">Adjust Appbar settings</string>
-    <string name="app_sidebar_enable_title">Enable Appbar</string>
-    <string name="app_sidebar_enable_summaryOn">Appbar is enabled</string>
-    <string name="app_sidebar_enable_summaryOff">Appbar is disabled</string>
-    <string name="app_sidebar_setup_items_title">Setup Appbar content</string>
-    <string name="app_sidebar_setup_items_summary">Add, remove, and position items in the Appbar</string>
-    <string name="app_sidebar_exclude_list_title">Excluded apps</string>
-    <string name="menu_excluded_apps_delete">Reset</string>
-    <string name="excluded_apps_title">Excluded apps</string>
-    <string name="app_sidebar_transparency_title">Appbar transparency</string>
-    <string name="app_sidebar_transparency_summary">Adjust the Appbar transparency level</string>
-    <string name="app_sidebar_position_title">Appbar position</string>
-    <string name="app_sidebar_position_summary">Position the Appbar on the left or right side of the screen</string>
-    <string name="app_sidebar_position_left">Left</string>
-    <string name="app_sidebar_position_right">Right</string>
-    <string name="app_sidebar_hide_labels_title">Hide icon labels</string>
-    <string name="app_sidebar_hide_labels_summary">Hide Appbar icon labels</string>
-    <string name="tab_category">Visible Tab</string>
-    <string name="use_tab_title">Display tab</string>
-    <string name="use_tab_summary">Display a visible tab on the side which will display the \@appbar when touched.</string>
-    <string name="tab_position_title">Tab location</string>
-    <string name="tab_position_summary">Display the tab on the top, middle, or bottom on the side of the screen.</string>
-    <string name="tab_size_title">Tab size</string>
-    <string name="tab_size_summary">Change the size of the visible tab.</string>
-    <string name="trigger_category">Trigger region</string>
-    <string name="trigger_width_title">Trigger width</string>
-    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
-    <string name="trigger_top_title">Trigger position</string>
-    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
-    <string name="trigger_bottom_title">Trigger height</string>
-    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
 
 </resources>
