--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6152,7 +6152,17 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="halo_state_black">Black list</string>
     <string name="halo_state_white">White list</string>
     <string name="halo_pause_title">Pause active app</string>
-    <string name="halo_pause_summary">When opening an app with HALO the underlying app will get paused</string>    
+    <string name="halo_pause_summary">When opening an app with HALO the underlying app will get paused</string>
+    <string name="halo_style_title">HALO style</string>
+    <string name="halo_style_summary">Different style of HALO bubbles</string>
+
+    <string name="halo_black">Black</string>
+    <string name="halo_blue">Blue</string>
+    <string name="halo_green">Green</string>
+    <string name="halo_white">White</string>
+    <string name="halo_blue_min">Blue minimal</string>
+    <string name="halo_green_min">Green minimal</string>
+    <string name="halo_white_min">White minimal</string>
 
     <!-- Delete apn confirmation dialog message -->
     <string name="confirm_delete_apn">The APN will be deleted.</string>
