fix previous commit that was supposed to fix things. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I0c73801ee3877c0ab467c06c241331007a920d6e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6156,7 +6156,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="halo_style_title">HALO style</string>
     <string name="halo_style_summary">Different style of HALO bubbles</string>
 
-    <string name="halo_blue">BeanStalk (default)</string>
+    <string name="halo_blue">Blue (default)</string>
     <string name="halo_green">Green</string>
     <string name="halo_white">White</string>
     <string name="halo_purple">Purple</string>
