--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5944,8 +5944,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="gestures_settings_title">Stylus gestures</string>
     <string name="category_spen_title">Stylus gestures</string>
     <string name="enable_subcat_title">Stylus</string>
-    <string name="enable_spen_title_head">Enable stylus gestures</string>
-    <string name="enable_spen_summary_head">Launch custom actions with stylus button swipe gestures. Warning: apps will not be able to receive input fired by holding the stylus button</string>
+    <string name="enable_spen_title_head">Enable gestures</string>
+    <string name="enable_spen_summary_head">Use swipe gestures by holding down the stylus button</string>
     <string name="gestures_subcat_title">Gestures</string>
     <string name="gestures_left_spen_title_head">Left swipe</string>
     <string name="gestures_left_spen_summary_head">Launch custom action on left swipe</string>
@@ -5962,9 +5962,9 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- Gestures Options -->
     <string name="gestures_action_empty">No action</string>
-    <string name="gestures_action_home">Emulate home key</string>
-    <string name="gestures_action_back">Emulate back key</string>
-    <string name="gestures_action_menu">Emulate menu key</string>
+    <string name="gestures_action_home">Home</string>
+    <string name="gestures_action_back">Back</string>
+    <string name="gestures_action_menu">Menu</string>
     <string name="gestures_action_search">Invoke search</string>
     <string name="gestures_action_recent">Recent apps</string>
 
@@ -6069,17 +6069,18 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <!-- Permissions Management -->
     <string name="permissions_settings_title">Permissions</string>
 
-    <!-- Category title for power sound notification specific Settings.
+    <!-- Category title for Charging sounds (Power state change) specific Settings.
          [CHAR LIMIT=40] -->
-    <string name="power_notifications_category_title">Power sounds</string>
+    <string name="power_notifications_category_title">Charging sounds</string>
 
-    <!-- Sound settings, power notifications enable/disable, setting check box label -->
+    <!-- Sound settings, Charging sounds enable/disable, setting check box label -->
     <string name="power_notifications_enable_title">Enable</string>
-    <!-- Sound settings, power notifications vibrate enable/disable, setting check box label -->
+    <string name="power_notifications_enable_summary">Play a sound when connecting or disconnecting the charger</string>
+    <!-- Sound settings, Charging sounds vibrate enable/disable, setting check box label -->
     <string name="power_notifications_vibrate_title">Vibrate</string>
-    <!-- Sound settings, power notifications ringtone selection, preference label -->
+    <!-- Sound settings, Charging sounds ringtone selection, preference label -->
     <string name="power_notifications_ringtone_title">Notification sound</string>
-    <!-- Sound settings, power notifications label for ringtone == none -->
+    <!-- Sound settings, Charging sounds label for ringtone == none -->
     <string name="power_notifications_ringtone_silent">Silent</string>
 
     <!-- Donate to BeanStalk -->
