Add 2G/3G option to profile connections (2/2)
Only show option when network type is GSM not CDMA

Change-Id: Ib225366c63ae928f23afd5bbe8b5f68818a4976b
Signed-off-by: scotthartbti <scott@ubuntu.com>

Conflicts:
	res/values/cm_arrays.xml
	res/values/cm_strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6190,4 +6190,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="privacy_guard_default_title">Privacy Guard</string>
     <string name="privacy_guard_default_summary">Enable Privacy Guard by default for newly-installed apps</string>
 
+    <!-- Profile network mode -->
+    <string name="profile_networkmode_2g">2G</string>
+    <string name="profile_networkmode_3g">3G</string>
+    <string name="profile_networkmode_2g3g">2G/3G</string>
 </resources>
