Add privacy guard support - Credit CM Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Ie2af3be9d8f048a8c97bb7819475b4382d896fb4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2607,7 +2607,8 @@
         <li>Disabled apps</li>\n
         <li>Disabled app notifications</li>\n
         <li>Default applications for actions</li>\n
-        <li>Background data restrictions for apps</li>\n\n
+        <li>Background data restrictions for apps</li>\n
+        <li>Privacy guard</li>\n\n
         You will not lose any app data.</string>
     <!-- [CHAR LIMIT=25] Manage applications screen, menu item.  Confirmation button of dialog to confirm resetting user's app preferences. -->
     <string name="reset_app_preferences_button">Reset apps</string>
@@ -6185,5 +6186,12 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="clear_recents_position_title">Clear recents position</string>
     <string name="clear_recents_position_left">Left</string>
     <string name="clear_recents_position_right">Right</string>
+
+    <!-- Privacy Guard -->
+    <string name="privacy_guard_switch_label">Enable Privacy Guard</string>
+    <string name="privacy_guard_dlg_title">Enable Privacy Guard?</string>
+    <string name="privacy_guard_dlg_text">When Privacy Guard is enabled, the app will not be able to access personal data such as contacts, messages, or call logs.</string>
+    <string name="privacy_guard_default_title">Privacy Guard</string>
+    <string name="privacy_guard_default_summary">Enable Privacy Guard by default for newly-installed apps</string>
 
 </resources>
