--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4676,6 +4676,9 @@
 
     <string name="dialog_indicator_color_title">Select color</string>
 
+    <string name="lockscreen_music_controls_title">Music controls</string>
+    <string name="lockscreen_music_controls_summary">Show player controls while music is playing</string>
+
     <!-- Profiles settings  -->
     <string name="profiles_settings_title">Profiles</string>
     <string name="profiles_general_title">General</string>
