--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6294,4 +6294,12 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <!-- Recents RAM circle -->
     <string name="circle_ram_title">Recents RAM circle</string>
     <string name="circle_ram_summary">Adds a circular meter surrounding the clear recents button</string>
+
+    <!-- GPS source selection -->
+    <string name="location_gps_source_title">GPS source</string>
+    <string name="location_gps_source_summary">Choose to use either an external Bluetooth GPS antenn
+a or the internal GPS antenna as location provider</string>
+    <string name="location_gps_source_notification_title">Alert</string>
+    <string name="location_gps_source_notification">The GPS source has been switched!\n\nGPS will be
+disabled. Please re-enable before use.</string>
 </resources>
