specify notification type for qs quick pulldown (slim 2/2) Signed-off-by: scotthartbti <scott@ubuntu.com>
Change-Id: Ie749710f2fd936ff9aa20adea9f5b246b7bd7757

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5274,6 +5274,11 @@
     <string name="quick_pulldown_off">Off</string>
     <string name="quick_pulldown_left">Left</string>
     <string name="quick_pulldown_right">Right</string>
+    <string name="no_notifications_pulldown_summary_nonperm">Pulldown quick settings if no non-permanent notifications are present</string>
+    <string name="no_notifications_pulldown_summary_all">Pulldown quick settings if no notifications are present</string>
+    <string name="no_notifications_pulldown_off">Off</string>
+    <string name="no_notifications_pulldown_nonperm">Non-permanent only</string>
+    <string name="no_notifications_pulldown_all">All Notifications</string>
     <string name="title_collapse_panel">Auto close panel</string>
     <string name="summary_collapse_panel">Close the Quick Settings panel upon toggle</string>
 
@@ -5294,7 +5299,6 @@
     <string name="tiles_reset_message">Restore the default displayed tiles and layout?</string>
 
     <string name="title_no_notifications_pulldown">Quick pulldown without notifications</string>
-    <string name="summary_no_notifications_pulldown">Pulldown quick settings if no notifications are present</string>
 
     <!--- Volume key cursor control -->
     <string name="volume_key_cursor_control_title">Volume key cursor control</string>
