Quick Settings: Option to use floating window (1/2)
Allows the option of launching preferences from the quicksettings menu in a
floating window

Change-Id: I267cae3cddaf8be697e5c60e21f7ba2616344a19
Signed-off-by: Evan Anderson <evan1124@gmail.com>
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/pa_strings.xml
	src/com/android/settings/cyanogenmod/QuickSettings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5405,6 +5405,8 @@
     <string name="no_notifications_pulldown_all">All Notifications</string>
     <string name="title_collapse_panel">Auto close panel</string>
     <string name="summary_collapse_panel">Close the Quick Settings panel upon toggle</string>
+    <string name="title_floating_window">Floating window</string>
+    <string name="summary_floating_window">Open Quick Settings tiles in floating window</string>
 
     <!-- QuickSettings style options -->
     <string name="quicksettings_tiles_style">Quick Settings style</string>
