--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5946,6 +5946,9 @@ rience. Better keep it disabled on lower end devices.</string>
     <string name="screensaver_settings_summary_wireless">While charging wirelessly</string> 
 
     <!-- Automatic brightness customization -->
+    <string name="auto_brightness_setup_title">Automatic brightness</string>
+    <string name="auto_brightness_adjustment_title">Brightness adjustment</string>
+    <string name="auto_brightness_twilight_adjustment">Adjust to sunrise and sunset</string>
     <string name="light_sensor_current_value">Current light sensor value: <xliff:g id="light_level">%d</xliff:g> lux</string>
     <string name="auto_brightness_dialog_title">Automatic brightness levels</string>
     <string name="auto_brightness_level_format"><xliff:g id="level">%1$d</xliff:g> lux</string>
