--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5855,6 +5855,7 @@ rience. Better keep it disabled on lower end devices.</string>
 
     <!-- Keyboard and Input ASS methods  -->
     <string name="title_keyboard_input">Keyboard and input methods</string>
+    <string name="ime_does_not_support_feature">Activated input method does not support this feature</string>
     <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
     <string name="disable_fullscreen_keyboard_summary">Landscape keyboard will never take up entire screen</string>
 
