--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5263,6 +5263,9 @@
     <!-- Status bar  -->
     <string name="status_bar_title">Status bar</string>
     <string name="status_bar_general_title">General</string>
+    <string name="status_bar_network_title">Network traffic</string>
+    <string name="status_bar_show_network_stats_title">Show network speeds</string>
+    <string name="status_bar_network_stats_update_title">Update frequency</string>
     <string name="status_bar_battery_title">Battery status style</string>
     <string name="status_bar_toggle_brightness">Brightness control</string>
     <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across status bar</string>
