update halo strings and remove systemui restart for halo colors Signed-off-by: scott <scott@ubuntu.com>
Change-Id: Icc570637a429d21a88f407168cd52f6ff7266347

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6345,18 +6345,27 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
  
     <!-- HALO -->
     <string name="halo_options_title">BeanStalk HALO</string>
-    <string name="halo_enabled_title">Enable HALO</string>
-    <string name="halo_enabled_summary">If checked enable HALO feature (floating window on recent apps would not be affected)</string>
+    <string name="halo_status_category">Status</string>
+    <string name="halo_colors_category">Colors</string>
+    <string name="halo_category">HALO</string>
     <string name="halo_hide_title">Hide HALO after activity</string>
     <string name="halo_hide_summary">HALO will appear for incoming tasks and scroll out of sight after a while</string>
-    <string name="halo_reversed_title">Reverse HALO</string>
-    <string name="halo_reversed_summary">Applies for task switching and moving gestures</string>
+    <string name="halo_reversed_title">Reverse HALO gestures</string>
+    <string name="halo_reversed_summary">Applies tasking or dragging to the double-tap-swipe gesture</string>
     <string name="halo_state_title">HALO policy</string>
-    <string name="halo_state_summary">Enables black/white listing notifications</string>
+    <string name="halo_state_summary">For black/white-listing notifications pinging through HALO</string>
     <string name="halo_state_black">Black list</string>
     <string name="halo_state_white">White list</string>
-    <string name="halo_pause_title">Pause active app</string>
-    <string name="halo_pause_summary">When opening an app with HALO the underlying app will get paused</string>
+
+    <string name="halo_size_title">HALO size</string>
+    <string name="halo_size_summary">Defines how big HALO is going to be</string>
+    <string name="halo_size_miniscule">Miniscule</string>
+    <string name="halo_size_small">Small</string>
+    <string name="halo_size_default">Default</string>
+    <string name="halo_size_large">Large</string>
+    <string name="halo_size_gigantic">Gigantic</string>
+    <string name="halo_size_monster">Monster</string>
+
     <string name="halo_colors_title">Custom colors</string>
     <string name="halo_colors_summary">Enable custom colors for HALO instead of the default theme colors</string>
     <string name="halo_circle_color_title">Circle color</string>
@@ -6364,13 +6373,12 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="halo_bubble_text_color_title">Speech bubble text color</string>
     <string name="halo_effect_color_title">Effect color</string>
     <string name="halo_effect_color_summary">Requires a systemui restart</string>
-    <string name="halo_size_title">HALO size</string>
-    <string name="halo_size_miniscule">Miniscule</string>
-    <string name="halo_size_small">Small</string>
-    <string name="halo_size_default">Default</string>
-    <string name="halo_size_large">Large</string>
-    <string name="halo_size_gigantic">Gigantic</string>
-    <string name="halo_size_monster">Monster</string>
+
+    <string name="halo_enabled_title">Enable HALO</string>
+    <string name="halo_enabled_summary">Completely enable or disable HALO</string>
+
+    <string name="halo_pause_title">HALO pause active app</string>
+    <string name="halo_pause_summary">When opening an app with HALO the underlying app will get paused (enabled by default on low memory devices)</string>
 
     <!-- Delete apn confirmation dialog message -->
     <string name="confirm_delete_apn">The APN will be deleted.</string>
