--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4646,6 +4646,8 @@
     <!-- Quiet hours -->
     <string name="quiet_hours_title">Quiet hours</string>
     <string name="quiet_hours_summary">Configure the hours the device should be quiet</string>
+    <string name="quiet_hours_note_title">Note</string>
+    <string name="quiet_hours_note_summary">Incoming calls will behave like usual during quiet hours</string>
     <string name="quiet_hours_enabled">Enable quiet hours</string>
     <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
     <string name="quiet_hours_enabled_off">Notifications will function as normal</string>
