--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6532,4 +6532,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
      <!-- Backlight brightness settings screen -->
     <string name="adaptive_backlight_title">Adaptive backlight</string>
     <string name="adaptive_backlight_summary">Intelligently vary the backlight brightness of the display and help maximize battery life</string>
+
+    <!-- Whether to allow mock SMS -->
+    <string name="allow_mock_sms">Allow mock SMS</string>
 </resources>
