--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6525,4 +6525,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="color_red_title">Red</string>
     <string name="color_green_title">Green</string>
     <string name="color_blue_title">Blue</string>
+
+    <!-- Show 4G icon instead of LTE. User defined settings -->
+    <string name="show_lte_or_fourgee_title">Show 4G network</string>
+    <string name="show_lte_or_fourgee_summary">This will allow you to show you 4G instead of LTE</string>
 </resources>
