--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6792,4 +6792,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="smart_cover_category_title">Smart cover</string>
     <string name="smart_cover_wake_title">Smart cover wake</string>
     <string name="smart_cover_wake_summary">Wakeup device when smart cover opens</string>
+
+    <!-- Roaming Date Settings -->
+    <string name="label_global_roaming_settings">Global roaming settings</string>
 </resources>
