--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4730,6 +4730,8 @@
     <string name="notification_style_grouptitle">Style</string>
     <string name="notification_style_title">Notification drawer style</string>
     <string name="notification_style_summary">Change your notification drawer style</string>
+    <string name="notification_show_wifi_ssid_title">Show Wifi network name</string>
+    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
 
     <!-- Notification drawer background -->
     <string name="notification_wallpaper_title">Notification drawer background</string>
