Add external bluetooth GPS support (2/2)
Originally by
Cuong Bui <cuongbui@gmail.com>
Benjamin Bunse <ich@morphew.de>

http://review.cyanogenmod.org/#/c/20849/
http://review.cyanogenmod.org/#/c/20850/

http://review.cyanogenmod.org/#/c/36809/
http://review.cyanogenmod.org/#/c/36810/
http://review.cyanogenmod.org/#/c/36811/

Change-Id: Ia88ad9c70f89a09d308d2cccf9860c4d35470b24
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/strings.xml
	res/xml/location_settings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6589,4 +6589,10 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
         sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on
     </string>
 
+    <!-- GPS Source selection -->
+    <string name="location_gps_source_title">GPS source</string>
+    <string name="location_gps_source_summary">Choose to use either an external bluetooth GPS or internal GPS as location provider</string>
+    <string name="location_gps_source_notification_title">Alert</string>
+    <string name="location_gps_source_notification">The GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
+
 </resources>
